@@ -18,7 +18,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public interface OriginComponent extends AutoSyncedComponent {
 
@@ -79,7 +78,7 @@ public interface OriginComponent extends AutoSyncedComponent {
 					choseOneAutomatically = true;
 					shouldContinue = true;
 				} else if (layer.getOriginOptionCount(player) == 1 && layer.shouldAutoChoose()) {
-					List<Origin> origins = layer.getOrigins(player).stream().map(OriginRegistry::get).filter(Origin::isChoosable).collect(Collectors.toList());
+					List<Origin> origins = layer.getOrigins(player).stream().map(OriginRegistry::get).filter(Origin::isChoosable).toList();
 					if (origins.size() == 0) {
 						List<Identifier> randomOrigins = layer.getRandomOrigins(player);
 						setOrigin(layer, OriginRegistry.get(randomOrigins.get(player.getRandom().nextInt(randomOrigins.size()))));
